--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 
-<!-- home 객체를 만드는 코드 -->
+<!-- tomcat보고 home 객체를 만들어달라는 코드 -->
 	<servlet>
 	<!-- HomeController home = new HomeController(); Java에서 이 코드에 해당-->
 		<servlet-name>home</servlet-name>
